changing ll2wdw for bb2wdw in the guide

--- a/contextily_guide.ipynb
+++ b/contextily_guide.ipynb
@@ -286,7 +286,7 @@
     "hou = (-10676650.69219051, 3441477.046670125, -10576977.7804825, 3523606.146650609)\n",
     "\n",
     "# Window\n",
-    "wdw = ctx.ll2wdw(hou, rtr)\n",
+    "wdw = ctx.bb2wdw(hou, rtr)\n",
     "# Raster subset\n",
     "sub = np.array([ rtr.read(band, window=wdw) \\\n",
     "      for band in range(1, rtr.count+1)]).transpose(1, 2, 0)\n",
@@ -373,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
