--- a/notebooks/providers_deepdive.ipynb
+++ b/notebooks/providers_deepdive.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -472,14 +472,15 @@
     }
    ],
    "source": [
-    "f, axs = plt.subplots(2, 5, figsize=(25, 10))\n",
+    "fig, axs = plt.subplots(2, 5, figsize=(25, 10))\n",
     "axs = axs.flatten()\n",
     "for name, ax in zip(selection, axs):\n",
     "    ax.axis(extent)\n",
     "    ctx.add_basemap(ax, source=providers[name])\n",
     "    ax.set_title(name)\n",
     "    ax.set_axis_off()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "fig.savefig(\"tiles.png\", bbox_inches=)"
    ]
   },
   {
