--- a/notebooks/providers_deepdive.ipynb
+++ b/notebooks/providers_deepdive.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
     "    ax.set_title(name)\n",
     "    ax.set_axis_off()\n",
     "plt.show()\n",
-    "fig.savefig(\"tiles.png\", bbox_inches=)"
+    "fig.savefig(\"tiles.png\", bbox_inches=\"tight\")"
    ]
   },
   {
