Add suggestions by @jorisvandenbossche

--- a/notebooks/working_with_local_files.ipynb
+++ b/notebooks/working_with_local_files.ipynb
@@ -21,7 +21,7 @@
     "import geopandas\n",
     "import rasterio\n",
     "from rasterio.plot import show as rioshow\n",
-    "from shapely.geometry import Polygon\n",
+    "from shapely.geometry import box\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f69fb75bdd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbb17d21290>"
       ]
      },
      "execution_count": 2,
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now this is better! But imagine that you wanted to take this map to a Desktop GIS (like [QGIS](https://qgis.org/en/site/)) and maybe do some more work; or that you simply wanted to retain a copy of the basemap in case you need to work offline. In those cases, `contextily` lets you download a basemap off the internet directly into a common GeoTIF file."
+    "Now this is better! But imagine that you wanted to take this map to a Desktop GIS (like [QGIS](https://qgis.org/en/site/)) and maybe do some more work; or that you simply wanted to retain a copy of the basemap in case you need to work offline. In those cases, `contextily` lets you download a basemap off the internet directly into a common GeoTIFF file."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "source": [
     "Note that, since our bounding box was expressed in lon/lat, we pass `ll=True` so the function knows about it. \n",
     "\n",
-    "You should now see a file written locally named `world_watercolor.tif`. This is saved in a standard format that any GIS should be able to read. In Python, the quickest way to visualise a `GeoTIF` file is with `rasterio`:"
+    "You should now see a file written locally named `world_watercolor.tif`. This is saved in a standard format that any GIS should be able to read. In Python, the quickest way to visualise a `GeoTIFF` file is with `rasterio`:"
    ]
   },
   {
@@ -224,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f69faddc1d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbb17392890>"
       ]
      },
      "execution_count": 7,
@@ -335,12 +335,7 @@
     "with rasterio.open(\"cape_town.tif\") as r:\n",
     "    west, south, east, north = tuple(r.bounds)\n",
     "    cape_town_crs = r.crs\n",
-    "bb_poly = Polygon([[west, south],\n",
-    "                   [east, south],\n",
-    "                   [east, north],\n",
-    "                   [west, north],\n",
-    "                   [west, south]\n",
-    "                  ])\n",
+    "bb_poly = box(west, south, east, north)\n",
     "bb_poly = geopandas.GeoDataFrame({\"geometry\": [bb_poly]}, \n",
     "                                 crs=cape_town_crs\n",
     "                                )"
@@ -361,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f69fad515d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbb1730d8d0>"
       ]
      },
      "execution_count": 11,
@@ -404,7 +399,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f69f8cbfa50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbb1527d850>"
       ]
      },
      "execution_count": 12,
