Change title for easier display on the website

--- a/notebooks/friends_gee.ipynb
+++ b/notebooks/friends_gee.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using `contextily` to display imagery from Google Earth Engine (GEE)\n",
+    "# Google Earth Engine\n",
+    "\n",
+    "#### Using `contextily` to display imagery from Google Earth Engine (GEE)\n",
     "\n",
     "In this notebook, we show how you can access data from Google Earth Engine through Google's `ee` package and create static (base)maps using `contextily`. We also show how this relates to the standard [way suggested by Google](https://github.com/google/earthengine-api/blob/master/python/examples/ipynb/ee-api-colab-setup.ipynb) to display imagery in an interactive context using `folium`."
    ]
