add edits @darribas suggests

--- a/notebooks/friends_cenpy_osmnx.ipynb
+++ b/notebooks/friends_cenpy_osmnx.ipynb
@@ -4,28 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Road to Frictionless Urban Data Science"
+    "# OSMNX & Cenpy\n",
+    "\n",
+    "#### Using contextily to map OpenStreetMap & US Census bureau data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With better geospatial computation tools than ever, urban data science is becoming easier and more accessbile. But, one of the most difficult parts of *Doing* data science is getting clean, useful data in a format that you can actually analyze. Fortunately, a variety of new packages in Python can help with this. We'll look at three\n",
-    "here:\n",
+    "In this notebook, we'll discuss how to access open data sources, such as data from OpenStreetMap or the United States Census, and make static maps showing urban demographics and streets with basemaps provided by `contextily`. The three main packages covered in this notebook are explained below:\n",
     "\n",
     "## OSMNX\n",
     "\n",
     "OSMNX, (styled `osmnx`, pronounced as `oh-ess-em-en-echs`), is a well-used package to examine Open Streetmap data from python. A good overview of the core concepts & ideas comes from [@gboeing](https://geoffboeing.com/2018/03/osmnx-features-roundup/), the lead author and maintainer of the package. Here, we'll use it to extract the street network of Austin, TX. \n",
     "\n",
+    "## Contextily\n",
+    "\n",
+    "Contextily (pronounced `context-a-lee`) is a python package that works with online map tile servers to provide basemaps for `matplotlib` plots. A ton of information on the package is available at [`contextily.readthedocs.io`](https://contextily.readthedocs.io/en/latest/). \n",
     "\n",
     "## Cenpy\n",
     "\n",
     "CenPy (pronounced `sen-pie`) is a a python package for interacting with the US Census Bureau's Data Products, hosted at [`api.census.gov`](https://api.census.gov). The Census exposes *a ton* of data products for people to use. Cenpy itself provides 2 \"levels\" of access. \n",
     "\n",
-    "## Contextily\n",
-    "\n",
-    "Contextily (pronounced `context-a-lee`) is a python package that works with online map tile servers to provide basemaps for `matplotlib` plots. A ton of information on the package is available at [`contextily.readthedocs.io`](https://contextily.readthedocs.io/en/latest/). \n",
     "\n",
     "### Census `products`\n",
     "\n",
