Fix inconsistency in import alias

--- a/notebooks/working_with_local_files.ipynb
+++ b/notebooks/working_with_local_files.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import contextily as ctx\n",
+    "import contextily as cx\n",
     "import geopandas\n",
     "import rasterio\n",
     "from rasterio.plot import show as rioshow\n",
@@ -90,7 +90,7 @@
    ],
    "source": [
     "ax = cliwoc.plot(linewidth=0.01, alpha=0.5, color=\"k\")\n",
-    "ctx.add_basemap(ax, \n",
+    "cx.add_basemap(ax, \n",
     "                crs=cliwoc.crs,\n",
     "               )"
    ]
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img, ext = ctx.bounds2raster(west, \n",
+    "img, ext = cx.bounds2raster(west, \n",
     "                             south, \n",
     "                             east, \n",
     "                             north, \n",
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "cape_town = ctx.Place(\"Cape Town\", source=ctx.providers.OpenStreetMap.Mapnik)\n",
+    "cape_town = cx.Place(\"Cape Town\", source=cx.providers.OpenStreetMap.Mapnik)\n",
     "cape_town.plot()"
    ]
   },
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cape_town = ctx.Place(\"Cape Town\", source=ctx.providers.OpenStreetMap.Mapnik, path=\"cape_town.tif\")"
+    "cape_town = cx.Place(\"Cape Town\", source=cx.providers.OpenStreetMap.Mapnik, path=\"cape_town.tif\")"
    ]
   },
   {
@@ -454,7 +454,7 @@
    ],
    "source": [
     "ax = cliwoc_cape_town.plot(linewidth=0.05, color=\"k\")\n",
-    "ctx.add_basemap(ax, \n",
+    "cx.add_basemap(ax, \n",
     "                crs=cliwoc_cape_town.crs, \n",
     "                source=\"cape_town.tif\"\n",
     "               )"
@@ -487,7 +487,7 @@
    ],
    "source": [
     "ax = cliwoc_cape_town.plot(linewidth=0.05, color=\"k\")\n",
-    "ctx.add_basemap(ax, \n",
+    "cx.add_basemap(ax, \n",
     "                crs=cliwoc_cape_town.crs, \n",
     "                source=\"cape_town.tif\",\n",
     "                alpha=0.5\n",
@@ -521,7 +521,7 @@
    ],
    "source": [
     "ax = cliwoc_cape_town_buffer.plot(linewidth=1, color=\"k\")\n",
-    "ctx.add_basemap(ax, \n",
+    "cx.add_basemap(ax, \n",
     "                crs=cliwoc_cape_town.crs, \n",
     "                source=\"cape_town.tif\"\n",
     "               )"
@@ -552,7 +552,7 @@
    ],
    "source": [
     "ax = cliwoc_cape_town_buffer.plot(linewidth=1, color=\"k\")\n",
-    "ctx.add_basemap(ax, \n",
+    "cx.add_basemap(ax, \n",
     "                crs=cliwoc_cape_town.crs, \n",
     "                source=\"cape_town.tif\",\n",
     "                reset_extent=False\n",
