--- a/notebooks/warping_guide.ipynb
+++ b/notebooks/warping_guide.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Warping tiles\n",
     "\n",
-    "Most basemap tiles provided through the web are expressed in the Web Mercator coordinate reference syste (`EPSG:3857`). However, often our data is not expressed in the same CRS. In those cases, we have two options if we want to plot them on top of a basemap: a) reproject our data to Web Mercator, or b) reproject (warp) the tiles to conform with our data. Which one is best depends on many things but mostly on the size of your own data. If you have a large and/or detailed dataset (e.g. high resolution polygons), reprojecting it might be expensive; if you have a small one, it might be the easiest as you can plot on top of the native tile. For the case where you don't want to transform your dataset, an alternative is to change the tiles to its CRS. In raster parlance, this is called \"warping\", and `contextily` can help you do that."
+    "Most basemap tiles provided through the web are expressed in the Web Mercator coordinate reference system (`EPSG:3857`). However, often our data is not expressed in the same CRS. In those cases, we have two options if we want to plot them on top of a basemap: a) reproject our data to Web Mercator, or b) reproject (warp) the tiles to conform with our data. Which one is best depends on many things but mostly on the size of your own data. If you have a large and/or detailed dataset (e.g. high resolution polygons), reprojecting it might be expensive; if you have a small one, it might be the easiest as you can plot on top of the native tile. For the case where you don't want to transform your dataset, an alternative is to change the tiles to its CRS. In raster parlance, this is called \"warping\", and `contextily` can help you do that."
    ]
   },
   {
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result here is a map expresed in Web Mercator."
+    "The result here is a map expressed in Web Mercator."
    ]
   },
   {
@@ -144,7 +144,7 @@
    "source": [
     "## Convert the tiles to your data's CRS\n",
     "\n",
-    "The same journey can be travelled in the oposite direction by leaving your data untouched and warping the tiles coming from the web. To do this in `add_basemap`, all you have to do is express the CRS your data are in:"
+    "The same journey can be travelled in the opposite direction by leaving your data untouched and warping the tiles coming from the web. To do this in `add_basemap`, all you have to do is express the CRS your data are in:"
    ]
   },
   {
