--- a/notebooks/working_with_local_files.ipynb
+++ b/notebooks/working_with_local_files.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Working with local files\n",
     "\n",
-    "At heart, `contextily` is a package to work with data from the web. Its main functionality allows you to access tilesets exposed through the popular XYZ format and include them in your workflow through `matplotlib`. However, a little hidden gem in the pacakge is also how it is useful to work with local files. For all this functionality, `contextily` relies on `rasterio` so, in the name of showing how a streamlined workflow could look like, we will switch back and forth between the two in this notebook. For good measure, we will also use `geopandas` as it'll show how they are all a family that works great together!"
+    "At heart, `contextily` is a package to work with data from the web. Its main functionality allows you to access tilesets exposed through the popular XYZ format and include them in your workflow through `matplotlib`. However, a little hidden gem in the package is also how it is useful to work with local files. For all this functionality, `contextily` relies on `rasterio` so, in the name of showing how a streamlined workflow could look like, we will switch back and forth between the two in this notebook. For good measure, we will also use `geopandas` as it'll show how they are all a family that works great together!"
    ]
   },
   {
